# portfolio-optimization-black-litterman

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
configs/: case_studies.yaml
notebooks/: 01_data_quality_and_universe_overview.ipynb  02_strategy_comparison_case_study.ipynb  03_black_litterman_sensitivity.ipynb  04_benchmark_attribution_alpha_decomposition.ipynb  README.md
reports/templates/: portfolio_report_template.md
scripts/: run_case_study.py
src/portfolio_bl/: __init__.py  config.py  pipeline.py
src/portfolio_bl/backtest/: engine.py  metrics.py
src/portfolio_bl/data/: __init__.py  disclosures.py  prices.py
src/portfolio_bl/models/: __init__.py  black_litterman.py  mean_variance.py
tests/: test_black_litterman.py  test_metrics.py  test_pipeline_smoke.py
